# ultrafast-laser-bo-modeling

./: .gitignore  AlSiC.csv  CFRP.csv  INTERFACE.md  README.md  SOFTWARE_USAGE_CN.md  SiC.csv  ZrO2.csv  codex_master_task_ultrafast_agent_refactor_trial_review_trace_skills.md  config.yaml  main.py  requirements.txt  ultrafast_laser_agent_system_overview.md  金刚石实验结果.xlsx
ultrafast_laser_memory/: .gitignore  README.md  pyproject.toml
ultrafast_laser_memory/configs/: default.yaml
ultrafast_laser_memory/docs/: main_agent_control_plane.md  process_workflow_v3_acceptance.md
ultrafast_laser_memory/examples/: sample_measurement.csv  sample_note.txt  sample_recipe.json
ultrafast_laser_memory/reports/: agent_refactor_after_tests.txt  agent_refactor_baseline_tests.txt  v31_minimal_chat_replay.txt  v31_runtime_fix.md  v31_validation_error_after.md  v31_validation_error_before.md
ultrafast_laser_memory/scripts/: migrate_legacy_trace_to_agent_event.py  run_task_intake_eval.py  setup_and_start_tui.ps1  start_agent_tui.ps1
ultrafast_laser_memory/skills/: contracts.yaml
ultrafast_laser_memory/tests/: conftest.py  test_agent_chat_projection.py  test_agent_guards.py  test_agent_loop_semantic_termination.py  test_agent_native_task_tool.py  test_agent_runtime_workflow.py  test_agent_structured_retry.py  test_agent_tool_loop.py  test_agent_trace.py  test_architecture_boundaries.py  test_auto_precheck.py  test_bo_application_services.py  test_bo_first_then_rag_then_llm.py  test_bo_governance_constraints_v4.py  test_bo_machine_bounds.py  test_cam_documents_v4.py  test_chat_api.py  (+96 more)
(+486 files in other folders)
